--- a/1.01/Index.html
+++ b/1.01/Index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta name="author" content="El Mehdi Oudaoud">
-        <title>El Mehdi Oudaoud| Intro </title>
+        <title>El Mehdi Oudaoud Protfolio</title>
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" href="Styles/Images/Icon.png">
         <link rel="stylesheet" href="Styles/fontawesome/css/all.css">
@@ -19,7 +19,7 @@
                 <div class="divider"></div>
                 <div class="welcome"> Welcome, </div>
                 
-                <div class="Introduction"> <p>My name is El Mehdi Oudaoud and I'm a Morrocan Software Engineer student.</p>
+                <div class="Introduction"> <p>My name is El Mehdi Oudaoud and I'm a Morrocan Software Engineer.</p>
                 </div>
                 <div class='Table'>
                     <ul class="Social-links">
