--- a/1.01/about me.html
+++ b/1.01/about me.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <meta name="author" content="El Mehdi Oudaoud">
+        <meta name="author" content="Med Amine LAHNINE">
         <title>El Mehdi Oudaoud| About me </title>
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/style sec1.css">
